update with resolved vdesc clob value

--- a/invoice-reports/invoice_view.jrxml
+++ b/invoice-reports/invoice_view.jrxml
@@ -226,102 +226,119 @@ WHERE id.id = $P{INVOICE_ID}]]>
 		<defaultValueExpression><![CDATA[$F{id}]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT * FROM invoice_details id 
-JOIN supplier_details sd ON id.supplier_id  = sd.id
-WHERE id.id = $P{INVOICE_ID}]]>
+		<![CDATA[SELECT
+	*,
+	CASE
+		WHEN ids.term = 'FIFTEEN' THEN '15'
+		WHEN ids.term = 'SEVEN' THEN '7'
+		WHEN ids.term = 'TWENTYONE' THEN '21'
+		WHEN ids.term = 'TWENTYEIGHT' THEN '28'
+		WHEN ids.term = 'THIRTY' THEN '30'
+		WHEN ids.term = 'COD' THEN 'COD'
+		ELSE NULL
+	END as terms
+FROM
+	invoice_details ids
+JOIN supplier_details sd ON
+	ids.supplier_id = sd.id
+WHERE
+	ids.id = $P{INVOICE_ID}]]>
 	</queryString>
 	<field name="id" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.name" value="id"/>
 		<property name="com.jaspersoft.studio.field.label" value="id"/>
+		<property name="com.jaspersoft.studio.field.name" value="id"/>
 	</field>
 	<field name="created_at" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="created_at"/>
 		<property name="com.jaspersoft.studio.field.label" value="created_at"/>
+		<property name="com.jaspersoft.studio.field.name" value="created_at"/>
 	</field>
 	<field name="record_status" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="record_status"/>
 		<property name="com.jaspersoft.studio.field.label" value="record_status"/>
+		<property name="com.jaspersoft.studio.field.name" value="record_status"/>
 	</field>
 	<field name="updated_at" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="updated_at"/>
 		<property name="com.jaspersoft.studio.field.label" value="updated_at"/>
+		<property name="com.jaspersoft.studio.field.name" value="updated_at"/>
 	</field>
 	<field name="cheque_number" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="cheque_number"/>
 		<property name="com.jaspersoft.studio.field.label" value="cheque_number"/>
+		<property name="com.jaspersoft.studio.field.name" value="cheque_number"/>
 	</field>
 	<field name="credit_amount" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.name" value="credit_amount"/>
 		<property name="com.jaspersoft.studio.field.label" value="credit_amount"/>
+		<property name="com.jaspersoft.studio.field.name" value="credit_amount"/>
 	</field>
 	<field name="invoice_amount" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.name" value="invoice_amount"/>
 		<property name="com.jaspersoft.studio.field.label" value="invoice_amount"/>
+		<property name="com.jaspersoft.studio.field.name" value="invoice_amount"/>
 	</field>
 	<field name="invoice_date" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="invoice_date"/>
 		<property name="com.jaspersoft.studio.field.label" value="invoice_date"/>
+		<property name="com.jaspersoft.studio.field.name" value="invoice_date"/>
 	</field>
-	<field name="invoice_desc" class="java.sql.Clob">
-		<property name="com.jaspersoft.studio.field.name" value="invoice_desc"/>
+	<field name="invoice_desc" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="invoice_desc"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="invoice_details"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value=""/>
+		<property name="com.jaspersoft.studio.field.name" value="invoice_desc"/>
 	</field>
 	<field name="invoice_number" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="invoice_number"/>
 		<property name="com.jaspersoft.studio.field.label" value="invoice_number"/>
-	</field>
-	<field name="is_paid" class="java.lang.Boolean">
-		<property name="com.jaspersoft.studio.field.name" value="is_paid"/>
-		<property name="com.jaspersoft.studio.field.label" value="is_paid"/>
+		<property name="com.jaspersoft.studio.field.name" value="invoice_number"/>
 	</field>
 	<field name="net_due" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.name" value="net_due"/>
 		<property name="com.jaspersoft.studio.field.label" value="net_due"/>
+		<property name="com.jaspersoft.studio.field.name" value="net_due"/>
 	</field>
 	<field name="paid_date" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="paid_date"/>
 		<property name="com.jaspersoft.studio.field.label" value="paid_date"/>
+		<property name="com.jaspersoft.studio.field.name" value="paid_date"/>
 	</field>
 	<field name="payment_due_date" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="payment_due_date"/>
 		<property name="com.jaspersoft.studio.field.label" value="payment_due_date"/>
+		<property name="com.jaspersoft.studio.field.name" value="payment_due_date"/>
 	</field>
 	<field name="term" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="term"/>
 		<property name="com.jaspersoft.studio.field.label" value="term"/>
+		<property name="com.jaspersoft.studio.field.name" value="term"/>
 	</field>
 	<field name="created_by" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.name" value="created_by"/>
 		<property name="com.jaspersoft.studio.field.label" value="created_by"/>
+		<property name="com.jaspersoft.studio.field.name" value="created_by"/>
 	</field>
 	<field name="updated_by" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.name" value="updated_by"/>
 		<property name="com.jaspersoft.studio.field.label" value="updated_by"/>
+		<property name="com.jaspersoft.studio.field.name" value="updated_by"/>
 	</field>
 	<field name="supplier_id" class="java.lang.Long">
-		<property name="com.jaspersoft.studio.field.name" value="supplier_id"/>
 		<property name="com.jaspersoft.studio.field.label" value="supplier_id"/>
+		<property name="com.jaspersoft.studio.field.name" value="supplier_id"/>
+	</field>
+	<field name="is_paid" class="java.lang.Boolean">
+		<property name="com.jaspersoft.studio.field.label" value="is_paid"/>
+		<property name="com.jaspersoft.studio.field.name" value="is_paid"/>
 	</field>
 	<field name="address" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="address"/>
 		<property name="com.jaspersoft.studio.field.label" value="address"/>
+		<property name="com.jaspersoft.studio.field.name" value="address"/>
 	</field>
 	<field name="contact_person" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="contact_person"/>
 		<property name="com.jaspersoft.studio.field.label" value="contact_person"/>
+		<property name="com.jaspersoft.studio.field.name" value="contact_person"/>
 	</field>
 	<field name="email" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="email"/>
 		<property name="com.jaspersoft.studio.field.label" value="email"/>
+		<property name="com.jaspersoft.studio.field.name" value="email"/>
 	</field>
 	<field name="phone" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="phone"/>
 		<property name="com.jaspersoft.studio.field.label" value="phone"/>
+		<property name="com.jaspersoft.studio.field.name" value="phone"/>
 	</field>
 	<field name="supplier_name" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="supplier_name"/>
 		<property name="com.jaspersoft.studio.field.label" value="supplier_name"/>
+		<property name="com.jaspersoft.studio.field.name" value="supplier_name"/>
+	</field>
+	<field name="terms" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="terms"/>
 	</field>
 	<variable name="credit_amount_SUM" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{credit_amount}]]></variableExpression>
@@ -338,7 +355,7 @@ WHERE id.id = $P{INVOICE_ID}]]>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
-				<imageExpression><![CDATA["apnaagora.jpg"]]></imageExpression>
+				<imageExpression><![CDATA[$P{LOGO_PATH} +"apnaagora.jpg"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="1" y="79" width="121" height="54" uuid="a4e6d727-ff85-4c28-b248-8502f2b26457"/>
@@ -443,7 +460,7 @@ Tallahassee, Florida]]></text>
 				<textFieldExpression><![CDATA[org.apache.commons.lang3.StringUtils.defaultIfBlank($F{cheque_number}, "N/A")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="79" width="100" height="25" uuid="bb866f00-ee5b-4f84-8e2e-a33a510aac21">
+				<reportElement x="455" y="80" width="100" height="25" uuid="bb866f00-ee5b-4f84-8e2e-a33a510aac21">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
@@ -586,7 +603,7 @@ Tallahassee, Florida]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="3" y="26" width="553" height="30" forecolor="#56B6BF" uuid="9af3cb2a-1f92-406c-a3ec-712e5bc78981"/>
-				<textFieldExpression><![CDATA[$F{invoice_desc}  == null ? "No data to display"  : $F{invoice_desc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{invoice_desc} == null || $F{invoice_desc}.trim().isEmpty() ? "No data to display" : $F{invoice_desc}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
